For loops simplification